--- a/README.textile
+++ b/README.textile
@@ -3,4 +3,7 @@ h1. Random Useless Scripts
 Here you will find some scripts / programs that I have written to help myself understand a language or concept.
 As well as some scripts that I may not have written. I try to note that where I can.
 
-Mostly organized by language.
+These are mostly organized by language.
+
+I do have some homework assignments here. If you are a CS student, you are welcome to read them to get ideas, but DO NOT COPY. How do you know I got a good grade?
+
